# ARC

./: .gitignore  README.md  agent.py  cli.py  code_review_report.html  extractor.py  ideas.txt  main.py  planner.py  pyproject.toml  system_info.txt  tool_test.py  tui.py  tui2.py  tui3.py
src/: __init__.py  agent.py  constants.py  events.py  extractor.py  llama_runtime.py  logger.py  memory.py  profiles.py  registry.py  schema.py  think.py  tools.py  validator.py
src/agent/: agent_n.py  events.py  llama_runtime.py  main_agent.py  memory.py  policy.py  profiles.py  schema.py  test.py
src/agent/roles/: __init__.py  compressor.py  extractor.py  planner.py  summarizer.py  synthesizer.py  validator.py
src/agent/sandbox/: __init__.py  bash.py  runner.py
src/agent/subagents/: __init__.py  generator.py  researcher.py
src/agent/types/: __init__.py  base.py
src/assets/: __init__.py
src/cli/: theme.py  types.py
src/cli/commands/doctor/: __init__.py  env.py
src/cli/commands/doctor/env/: __init__.py
src/cli/commands/run/: __init__.py
src/roles/: __init__.py  base.py  coder.py  extractor.py  generator.py  planner.py  summarizer.py  synthesizer.py  think.py  validator.py
src/sandbox/: __init__.py  allowlist.py  bash.py
src/tools/: __init__.py  builtin.py  registry.py  research.py  search.py  utils.py
src/tools/sandbox/: __init__.py  allowlist.py  bash.py  runner.py
src/ui/: theme.py
src/ui/commands/doctor/: __init__.py
src/ui/commands/doctor/env/: __init__.py
src/ui/commands/run/: __init__.py
src/util/: constants.py  heal.py  models.py
