[project]
name = "arc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "huggingface-hub>=1.16.4",
    "llama-cpp-python>=0.3.23",
    "matplotlib>=3.10.9",
    "psutil>=7.2.2",
    "questionary>=2.1.1",
    "restrictedpython>=8.1",
    "textual>=8.2.7",
]
